sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:6: error: not found: value v
		while (plusPetit(v,i-c)) {
                                 ^AlgInsertionSort:11: error: not found: value v
		copie(v,i-c)
                      ^