sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
	for (i <- 1 to getNombreValeurs-1) {

		var c = 1;
		while (plusPetit(v,i-c)) {
			var v = getValeur(i);			
			copie(i-c-1,i-c)
			c = c +1 
		}
		copie(v,i-c)
	}
}

                                                                  